[gd_scene load_steps=30 format=2]

[ext_resource path="res://UI/Themes/Styles/stylebox_selected_box.tres" type="StyleBox" id=1]
[ext_resource path="res://UI/level_completed/level_completed.gd" type="Script" id=2]
[ext_resource path="res://UI/level_completed/damage_taken_icon.png" type="Texture" id=3]
[ext_resource path="res://UI/level_completed/time_icon.png" type="Texture" id=4]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Icons/play.png" type="Texture" id=6]
[ext_resource path="res://UI/Icons/restart.png" type="Texture" id=7]
[ext_resource path="res://UI/Themes/Styles/stylebox_box.tres" type="StyleBox" id=8]
[ext_resource path="res://UI/Themes/Styles/stylebox_spikey.tres" type="StyleBox" id=9]
[ext_resource path="res://UI/Themes/Styles/stylebox_empty.tres" type="StyleBox" id=10]
[ext_resource path="res://UI/Themes/Styles/stylebox_full.tres" type="StyleBox" id=11]
[ext_resource path="res://UI/Themes/Fonts/smallest_pixel_7.tres" type="DynamicFont" id=12]
[ext_resource path="res://UI/Themes/Fonts/m6x11.tres" type="DynamicFont" id=13]
[ext_resource path="res://UI/Icons/dropdown.png" type="Texture" id=14]
[ext_resource path="res://UI/Icons/x.png" type="Texture" id=15]
[ext_resource path="res://UI/Icons/option_selected.png" type="Texture" id=16]
[ext_resource path="res://UI/Icons/checked.png" type="Texture" id=17]
[ext_resource path="res://UI/Icons/unchecked.png" type="Texture" id=18]
[ext_resource path="res://UI/Icons/option_empty.png" type="Texture" id=19]
[ext_resource path="res://UI/Themes/grabber.png" type="Texture" id=20]
[ext_resource path="res://UI/Themes/Fonts/m6x11.ttf" type="DynamicFontData" id=21]

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxLine" id=2]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
outline_color = Color( 0.913725, 0.827451, 0.12549, 1 )
extra_spacing_top = 4
extra_spacing_bottom = -2
extra_spacing_space = 1
font_data = ExtResource( 21 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
vertical = true

[sub_resource type="Theme" id=8]
default_font = ExtResource( 13 )
CheckBox/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
CheckBox/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckBox/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_pressed = Color( 1, 1, 1, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = ExtResource( 13 )
CheckBox/icons/checked = ExtResource( 17 )
CheckBox/icons/radio_checked = ExtResource( 16 )
CheckBox/icons/radio_unchecked = ExtResource( 19 )
CheckBox/icons/unchecked = ExtResource( 18 )
CheckBox/styles/disabled = null
CheckBox/styles/focus = SubResource( 5 )
CheckBox/styles/hover = SubResource( 6 )
CheckBox/styles/hover_pressed = SubResource( 7 )
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
ColorPicker/constants/h_width = 10
ColorPicker/constants/label_width = 5
ColorPicker/constants/margin = 1
ColorPicker/constants/sv_height = 10
ColorPicker/constants/sv_width = 10
ColorPickerButton/styles/disabled = ExtResource( 8 )
ColorPickerButton/styles/focus = ExtResource( 1 )
ColorPickerButton/styles/hover = ExtResource( 1 )
ColorPickerButton/styles/normal = ExtResource( 8 )
ColorPickerButton/styles/pressed = ExtResource( 1 )
HSeparator/constants/separation = 1
HSeparator/styles/separator = SubResource( 2 )
HSlider/icons/grabber = ExtResource( 20 )
HSlider/icons/grabber_highlight = ExtResource( 20 )
HSlider/styles/grabber_area = ExtResource( 1 )
HSlider/styles/grabber_area_highlight = ExtResource( 1 )
HSlider/styles/slider = ExtResource( 8 )
Icons/icons/close = ExtResource( 15 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 13 )
Label/styles/normal = null
LineEdit/fonts/font = SubResource( 4 )
LineEdit/styles/focus = ExtResource( 1 )
LineEdit/styles/normal = ExtResource( 8 )
LineEdit/styles/read_only = ExtResource( 8 )
OptionButton/colors/font_color = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_disabled = Color( 0.901961, 0.901961, 0.901961, 0.2 )
OptionButton/colors/font_color_hover = Color( 1, 1, 1, 1 )
OptionButton/colors/font_color_pressed = Color( 1, 1, 1, 1 )
OptionButton/constants/arrow_margin = 2
OptionButton/constants/hseparation = 2
OptionButton/fonts/font = ExtResource( 13 )
OptionButton/icons/arrow = ExtResource( 14 )
OptionButton/styles/disabled = ExtResource( 9 )
OptionButton/styles/focus = ExtResource( 1 )
OptionButton/styles/hover = ExtResource( 8 )
OptionButton/styles/normal = ExtResource( 8 )
OptionButton/styles/pressed = ExtResource( 1 )
Panel/styles/panel = null
PanelContainer/styles/panel = ExtResource( 8 )
PopupDialog/styles/panel = ExtResource( 8 )
PopupMenu/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/colors/font_color_separator = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource( 13 )
PopupMenu/icons/checked = ExtResource( 16 )
PopupMenu/icons/radio_checked = ExtResource( 16 )
PopupMenu/icons/radio_unchecked = ExtResource( 19 )
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = ExtResource( 19 )
PopupMenu/styles/hover = ExtResource( 1 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = ExtResource( 8 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
PopupPanel/styles/panel = ExtResource( 8 )
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 1, 1, 1, 1 )
ProgressBar/fonts/font = ExtResource( 13 )
ProgressBar/styles/bg = ExtResource( 10 )
ProgressBar/styles/fg = ExtResource( 11 )
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 0.568627, 0.541176, 0.541176, 0.45098 )
TabContainer/colors/font_color_fg = Color( 0.301961, 0.768627, 0.239216, 1 )
TabContainer/constants/hseparation = 0
TabContainer/constants/label_valign_bg = 0
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 0
TabContainer/fonts/font = ExtResource( 13 )
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = ExtResource( 8 )
TabContainer/styles/tab_bg = ExtResource( 8 )
TabContainer/styles/tab_disabled = ExtResource( 8 )
TabContainer/styles/tab_fg = ExtResource( 8 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.101961 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = ExtResource( 12 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 1 )
VScrollBar/styles/grabber_highlight = ExtResource( 1 )
VScrollBar/styles/grabber_pressed = ExtResource( 1 )
VScrollBar/styles/scroll = ExtResource( 8 )
VScrollBar/styles/scroll_focus = null
VSeparator/constants/separation = 1
VSeparator/styles/separator = SubResource( 3 )
WindowDialog/colors/title_color = Color( 1, 1, 1, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = ExtResource( 13 )
WindowDialog/icons/close = ExtResource( 15 )
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = ExtResource( 8 )

[sub_resource type="Animation" id=1]
resource_name = "animation"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area/body/damage/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area/body/time/Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("area/body/damage/comment:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("area/body/time/comment:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("area/body/damage:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -200, 0 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("area/body/time:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 376, 0 ), Vector2( 176, 0 ) ]
}

[node name="level_completed" type="ColorRect"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 8 )
color = Color( 0, 0, 0, 0.705882 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="area" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="VBoxContainer" parent="area"]
margin_right = 344.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="area/header"]
margin_right = 344.0
margin_bottom = 16.0
text = "level completed"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="area/header"]
margin_top = 20.0
margin_right = 344.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="body" type="HBoxContainer" parent="area"]
margin_top = 25.0
margin_right = 344.0
margin_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="damage" type="VBoxContainer" parent="area/body"]
margin_right = 167.0
margin_bottom = 120.0
size_flags_horizontal = 3
alignment = 1

[node name="icon" type="TextureRect" parent="area/body/damage"]
margin_left = 53.0
margin_top = 10.0
margin_right = 114.0
margin_bottom = 70.0
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="area/body/damage"]
margin_top = 74.0
margin_right = 167.0
margin_bottom = 90.0
text = "damage taken: "
align = 1

[node name="comment" type="Label" parent="area/body/damage"]
margin_top = 94.0
margin_right = 167.0
margin_bottom = 110.0
align = 1

[node name="VSeparator" type="VSeparator" parent="area/body"]
margin_left = 171.0
margin_right = 172.0
margin_bottom = 120.0

[node name="time" type="VBoxContainer" parent="area/body"]
margin_left = 176.0
margin_right = 344.0
margin_bottom = 120.0
size_flags_horizontal = 3
alignment = 1

[node name="icon" type="TextureRect" parent="area/body/time"]
margin_left = 55.0
margin_top = 8.0
margin_right = 113.0
margin_bottom = 71.0
size_flags_horizontal = 4
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="area/body/time"]
margin_top = 75.0
margin_right = 168.0
margin_bottom = 91.0
text = "time: "
align = 1

[node name="comment" type="Label" parent="area/body/time"]
margin_top = 95.0
margin_right = 168.0
margin_bottom = 111.0
align = 1

[node name="HSeparator" type="HSeparator" parent="area"]
margin_top = 149.0
margin_right = 344.0
margin_bottom = 150.0

[node name="footer" type="HBoxContainer" parent="area"]
margin_top = 154.0
margin_right = 344.0
margin_bottom = 176.0
alignment = 1

[node name="proceed" parent="area/footer" instance=ExtResource( 5 )]
margin_left = 96.0
margin_right = 175.0
margin_bottom = 22.0
text = "proceed"
icon = ExtResource( 6 )
flat = true

[node name="replay" parent="area/footer" instance=ExtResource( 5 )]
margin_left = 179.0
margin_right = 247.0
margin_bottom = 22.0
text = "replay"
icon = ExtResource( 7 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animation = SubResource( 1 )

[connection signal="pressed" from="area/footer/proceed" to="." method="_on_proceed_pressed"]
[connection signal="pressed" from="area/footer/replay" to="." method="_on_replay_pressed"]
